--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>React App</title>
+  </head>
 
-<h2 title="I'm a header">The title Attribute</h2>
+  <body>
+    <div id="app"></div>
 
-<p title="I'm a tooltip">Mouse over this paragraph, to display the title attribute as a tooltip.</p>
-
-</body>
+    <script src="./build/bundle.js"></script>
+  </body>
 </html>
